--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        resValue "string", "google_maps_key","AIzaSyDJsxFookRx-qkl-jgKY4NVRdWtotjiy0s"
     }
     buildTypes {
         release {
@@ -31,7 +32,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation "android.arch.persistence.room:runtime:1.0.0"
+    implementation 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
 }
